@@ -12,6 +12,8 @@ with 'Mason::Filters::Standard';
 has 'args' => ( init_arg => undef, lazy_build => 1 );
 has 'm'    => ( required => 1, weak_ref => 1 );
 
+__PACKAGE__->meta->make_immutable();
+
 method BUILD ($params) {
 
     # Make a copy of params and re-weaken m
@@ -26,7 +28,10 @@ method cmeta () {
 
 method _build_args () {
     my $orig_params = $self->{_orig_params};
-    return { map { ( $_, $orig_params->{$_} ) } grep { $_ ne 'm' } keys(%$orig_params) };
+    return {
+        map { ( $_, $orig_params->{$_} ) }
+        grep { $_ ne 'm' } keys(%$orig_params)
+    };
 }
 
 # Default handle - call render
@@ -58,8 +63,6 @@ method allow_path_info () {
 method no_wrap ($class:) {
     $class->meta->add_method( 'render' => sub { $_[0]->main(@_) } );
 }
-
-__PACKAGE__->meta->make_immutable();
 
 1;
 
@@ -93,8 +96,6 @@ of a request).
 
 In many cases only C<main> will actually do anything.
 
-=for html <a name="handle" />
-
 =over
 
 =item handle
@@ -125,15 +126,11 @@ render the page
 It should not output any content itself. By default, it simply calls
 L<render|/render>.
 
-=for html <a name="render" />
-
 =item render
 
 This method is invoked from L<handle|/handle> on the page component. Its job is
 to output the full content of the page. By default, it simply calls
 L<wrap|/wrap>.
-
-=for html <a name="wrap" />
 
 =item wrap
 
@@ -166,8 +163,6 @@ To do no wrapping at all, call the component class method L</no_wrap>:
     <%class>
     CLASS->no_wrap;
     </%class>
-
-=for html <a name="main" />
 
 =item main
 
@@ -206,16 +201,12 @@ L<Mason::Manual::RequestDispatch/Partial Paths|Mason::Manual::RequestDispatch>.
 
 =head1 OTHER METHODS
 
-=for html <a name="args" />
-
 =over
 
 =item args
 
 Returns the hashref of arguments passed to this component's constructor, e.g.
 the arguments passed in a L<component call|/CALLING COMPONENTS>.
-
-=for html <a name="cmeta" />
 
 =item cmeta
 
@@ -224,8 +215,6 @@ component class, containing information such as the component's path and source
 file.
 
     my $path = $self->cmeta->path;
-
-=for html <a name="m" />
 
 =item m
 
