@@ -142,8 +142,8 @@ which is transformed by L<DollarDot|Mason::Plugin::DollarDot> to
 
     $self->foo
 
-In the rest of this documentation we will use C<$.> notation, but feel free to
-substitute C<< $self-> >> conceptually and/or in reality.
+In the rest of this documentation we will use C<$.> notation, but feel
+free to substitute C<< $self-> >> conceptually and/or in reality.
 
 To set the attribute, you must use:
 
