@@ -1,4 +1,4 @@
-package Mason::Moose;
+package Mason::Moose;    ## no critic (Moose::RequireMakeImmutable)
 use Moose                      ();
 use MooseX::HasDefaults::RO    ();
 use MooseX::StrictConstructor  ();
