@@ -468,8 +468,6 @@ separator, regardless of what your operating system uses.
 These parameters would normally be passed in an initial hashref to  C<<
 $interp->run >>, C<< $m->visit >>, or C<< $m->go >>.
 
-=for html <a name="out_method" />
-
 =over
 
 =item out_method
@@ -490,8 +488,6 @@ L<Mason::Result|Mason::Result> object returned from C<< $interp->run >>.
 
 =head1 PUBLIC METHODS
 
-=for html <a name="abort" />
-
 =over
 
 =item abort ()
@@ -502,8 +498,6 @@ components.
 C<abort> is implemented by throwing an C<Mason::Exception::Abort> object and
 can thus be caught by C<eval>. The C<aborted> method is a shortcut for
 determining whether a caught error was generated by C<abort>.
-
-=for html <a name="aborted" />
 
 =item aborted ([$err])
 
@@ -520,14 +514,10 @@ letting C<abort> exceptions pass through:
         # handle fatal errors...
     };
 
-=for html <a name="add_cleanup" />
-
 =item add_cleanup (code)
 
 Add a code reference to be executed when the request is L<cleaned
 up|/cleanup_request>.
-
-=for html <a name="clear_and_abort" />
 
 =item clear_and_abort ()
 
@@ -535,8 +525,6 @@ This method is syntactic sugar for calling C<clear_buffer()> and then
 C<abort()>.  If you are aborting the request because of an error (or, in a web
 environment, to do a redirect), you will often want to clear the buffer first
 so that any output generated up to that point is not sent to the client.
-
-=for html <a name="capture" />
 
 =item capture (code)
 
@@ -549,8 +537,6 @@ is equivalent to
 
     my $buf = $m->scomp('/foo');
 
-=for html <a name="clear_buffer" />
-
 =item clear_buffer ()
 
 Clears the Mason output buffer. Any output sent before this line is discarded.
@@ -559,8 +545,6 @@ a request.
 
 clear_buffer is, of course, thwarted by L<flush_buffer|/flush_buffer>.
 
-=for html <a name="comp" />
-
 =item comp (path[, params ...])
 
 Creates a new instance of the component designated by I<path>, and calls its
@@ -568,37 +552,27 @@ C<main> method. I<params>, if any, are passed to the constructor.
 
 The C<< <& &> >> tag provides a shortcut for C<$m-E<gt>comp>.
 
-=for html <a name="comp_exists" />
-
 =item comp_exists (path)
 
 Makes the component I<path> absolute if necessary, and calls L<Interp
 comp_exists|Mason::Interp/comp_exists> to determine whether a component exists
 at that path.
 
-=for html <a name="current_comp_class" />
-
 =item current_comp_class ()
 
 Returns the current component class. This is determined by walking up the Perl
 caller() stack until the first Mason::Component subclass is found.
-
-=for html <a name="current_request" />
 
 =item current_request ()
 
 This class method returns the C<Mason::Request> currently in use.  If called
 when no Mason request is active it will return C<undef>.
 
-=for html <a name="construct" />
-
 =item construct (path[, params ...])
 
 Constructs and return a new instance of the component designated by I<path>.
 I<params>, if any, are passed to the constructor. Throws an error if I<path>
 does not exist.
-
-=for html <a name="decline" />
 
 =item decline ()
 
@@ -616,8 +590,6 @@ C</news/sports.mc>.  A call to C<< $m->decline >> would restart the request and
 resolve to C</news/dhandler.mc>, a second C<< $m->decline >> would resolve to
 C</dhandler.mc>, and a third would throw a "not found" error.
 
-=for html <a name="flush_buffer" />
-
 =item filter (filter_expr, [filter_expr...], string|coderef)
 
 Applies one or more filters to a string or to a coderef that returns a string.
@@ -632,8 +604,6 @@ request's L<out_method|/out_method>.
 Note that anything output within a C<< $m->scomp >> or C<< $m->capture >> will
 not have made it to the main output buffer, and thus cannot be flushed.
 
-=for html <a name="go" />
-
 =item go ([request params], path, args...)
 
 Performs an internal redirect. Clears the output buffer, runs a new request for
@@ -645,28 +615,20 @@ to the C<Mason::Request> constructor.
 
 See also L<visit|/visit>.
 
-=for html <a name="interp" />
-
 =item interp ()
 
 Returns the L<Interp|Mason::Interp> object associated with this request.
-
-=for html <a name="load" />
 
 =item load (path)
 
 Makes the component I<path> absolute if necessary, and calls L<Interp
 load|Mason::Interp/load> to load the component class associated with the path.
 
-=for html <a name="log" />
-
 =item log ()
 
 Returns a C<Log::Any> logger with a log category specific to the current
 component.  The category for a component "/foo/bar" would be
 "Mason::Component::foo::bar".
-
-=for html <a name="notes" />
 
 =item notes ([key[, value]])
 
@@ -681,20 +643,14 @@ reference to the entire hash of key-value pairs.
 Consider storing this kind of data in a read-write attribute of the page
 component.
 
-=for html <a name="print" />
-
 =item print (string)
 
 Add the given I<string> to the Mason output buffer. This happens implicitly for
 all content placed in the main component body.
 
-=for html <a name="page" />
-
 =item page ()
 
 Returns the page component originally called in the request.
-
-=for html <a name="path_info" />
 
 =item path_info ()
 
@@ -706,27 +662,19 @@ path_info with
 
     if ( length($m->path_info) )
 
-=for html <a name="rel_to_abs" />
-
 =item rel_to_abs (path)
 
 Converts a component I<path> to absolute form based on the current component,
 if it does not already begin with a '/'.
-
-=for html <a name="request_args" />
 
 =item request_args ()
 
 Returns the original hashref of arguments passed to the request, e.g. via C<<
 $interp->run >>.
 
-=for html <a name="request_path" />
-
 =item request_path ()
 
 Returns the original path passed to the request, e.g. in C<< $interp->run >>.
-
-=for html <a name="scomp" />
 
 =item scomp (comp, args...)
 
@@ -734,8 +682,6 @@ Like L<comp|Mason::Request/item_comp>, but returns the component output as a
 string instead of printing it. (Think sprintf versus printf.)
 
 See also L<capture|/capture>.
-
-=for html <a name="visit" />
 
 =item visit ([request params], path, args...)
 
@@ -759,8 +705,6 @@ modify with method modifiers in L<plugins|Mason::Manual::Plugins> and
 L<subclasses|Mason::Manual::Subclasses>. Their APIs will be kept as stable as
 possible.
 
-=for html <a name="cleanup_request" />
-
 =over
 
 =item cleanup_request ()
@@ -769,14 +713,10 @@ A place to perform cleanup duties when the request finishes or dies with an
 error, even if the request object is not immediately destroyed. Includes
 anything registered with L<add_cleanup|/add_cleanup>.
 
-=for html <a name="construct_page_component" />
-
 =item construct_page_component ($compc, $args)
 
 Constructs the page component of class I<$compc>, with hashref of constructor
 arguments I<$args>.
-
-=for html <a name="match_request_path" />
 
 =item match_request_path ($request_path)
 
@@ -790,14 +730,10 @@ This method is called on the output buffer right before it is sent to its final
 destination. I<$outref> is a reference to the output string; the method can
 modify it as desired.
 
-=for html <a name="run" />
-
 =item run ($request_path, args)
 
 Runs the request with I<$request_path> and I<args>, where the latter can be
 either a hashref or a hash. This is generally called via << $interp->run >>.
-
-=for html <a name="with_tied_print" />
 
 =item with_tied_print ($code)
 
