@@ -1,6 +1,8 @@
 package Mason::Test::Overrides::Component::StrictMoose;
 use Moose::Exporter;
 use MooseX::StrictConstructor ();
+use strict;
+use warnings;
 use base qw(Mason::Component::Moose);
 Moose::Exporter->setup_import_methods();
 
