@@ -6,4 +6,6 @@ before 'run' => sub {
     print STDERR "starting interp run\n";
 };
 
+__PACKAGE__->meta->make_immutable();
+
 1;
