@@ -27,5 +27,7 @@ sub weave_section {
     );
 }
 
+__PACKAGE__->meta->make_immutable();
+
 no Moose;
 1;
