@@ -5,7 +5,8 @@ Revision history for Mason
 2.20  May 2, 2012
 
 * Fixes
-  - Coerce undefined filter argument to the empty string - Tomohiro Hosaka
+  - Coerce undefined filter argument to the empty string (Tomohiro Hosaka)
+  - Eliminate "=for html" POD entries, which were mangling metacpan.org output (Pedro Melo)
 
 * Documentation
   - Moved eg/blog to Poet
